<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/linearLayout_version"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        tools:layout_editor_absoluteX="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/version"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/version_0_1_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/version_0_2_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/version_0_3_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/version_1_0_info" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_the_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_version">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Team: "
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/roi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/sergio" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/marcos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/cacha" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_the_team">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cool, go back"
            android:onClick="menu"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>